--- a/gocardless.html
+++ b/gocardless.html
@@ -13,7 +13,7 @@
 		})(window,document,'script','dataLayer','GTM-MP3QRF');
 	</script>
 	<!-- End Google Tag Manager -->
-    <title>Checkatrade </title>
+    <title>Gocardless demo </title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=1" />	
@@ -178,11 +178,10 @@ piHostname = 'pi.pardot.com';
 
     <section id="header">
         <div class="wrapper">
-			<a href="https://www.checkatrade.com/" target="_blank"><img src="https://storage.pardot.com/796483/1616685291ekBFDFvW/logo.png" alt="Checkatrade" id="logo" /></a>
 			<div id="phone">
 				<div id="desktop">
-					Call us now on <a href="tel:02394212631">02394 212631</a>
-					<div id="hours">Lines open 9am to 7pm Mon-Fri, 9am to 2:30pm Sat</div>
+
+
 					<div id="phone_number" pardot-region="phone_number" pardot-region-type="simple"></div>
 				</div>
 				<div id="mobile">
@@ -198,7 +197,7 @@ piHostname = 'pi.pardot.com';
 	<section id="title">
 		<div class="wrapper">
 			<h1>Your business details</h1>
-			Thanks for your interest in Checkatrade. Please tell us a bit more about your business so that we can: 
+			Thanks for your interest in {}. Please tell us a bit more about your business so that we can: 
 			<ul>
 				<li>Give you an accurate quote for the <span class="dynamic_category"></span> category</li>
 				<li>Show you how many leads you could be getting</li>
@@ -572,40 +571,19 @@ form.form p label { color: #000000; }
 	});
 })(); });})();</script>
 			</div>
-			<div id="privacy-notice">All fields are mandatory. We will never misuse your data or spam you. <a href="https://www.checkatrade.com/About/Privacy.aspx" target="_blank">Read our Privacy&nbsp;Notice</a></div>
+	
 		</div>
 	</section>
 	
     <section id="footer">
 		<div class="wrapper">
-			<div id="links">
-				<nav>
-					<a href="https://www.checkatrade.com/Consumer/" target="_blank">Why Checkatrade?</a>
-					<a href="https://www.checkatrade.com/Consumer/CheckatradeStandard.aspx" target="_blank">The Checkatrade standard</a>
-					<a href="https://www.checkatrade.com/Consumer/Complaints.aspx/" target="_blank">Complaints about a member</a>
-					<a href="https://www.checkatrade.com/Consumer/FAQ.aspx" target="_blank">FAQ</a>
-					<a href="https://www.checkatrade.com/Consumer/SecureContacts/" target="_blank">Secure contacts</a>
-					<a href="https://careers.checkatrade.com/vacancies/vacancy-search-results.aspx?ictd[master]=vid~dad069a8-bb25-43e3-b0ff-d0deb7153d5d&ictd[il3393]=rlt~1601572185~land~2_25722_direct_5367ee7ef51acb5ab1bbceb6789a6737" target="_blank">Careers</a>
-					<a href="https://www.checkatrade.com/partnerships/" target="_blank">Partners</a>
-					<a href="https://www.checkatrade.com/About/Legal.aspx" target="_blank">Terms of use</a>
-					<a href="https://www.checkatrade.com/About/Privacy.aspx" target="_blank">Privacy notice</a>
-					<a href="https://www.checkatrade.com/sitemap" target="_blank">Sitemap</a>
-					<a href="https://www.checkatrade.com/Contact/" target="_blank">Contact us</a>
-					<a href="https://www.checkatrade.com/Downloads/GenderPay.pdf" target="_blank">Gender pay report 2017</a>
-					<a href="https://www.checkatrade.com/Downloads/gender-pay-2018.pdf" target="_blank">Gender pay report 2018</a>
-					<a class="last" href="https://www.checkatrade.com/Downloads/gender-pay-2019.pdf" target="_blank">Gender pay report 2019</a>
-				</nav>
+
 			</div>
 			
 			<div id="social">
-				<a href="https://twitter.com/Checkatrade" target="_blank"><img src="https://storage.pardot.com/796483/1601576195GZY1Ih2p/tw.gif" width="36" alt="tw" /></a>
-				<a href="https://www.facebook.com/VettedLtd" target="_blank"><img src="https://storage.pardot.com/796483/1601576252sm7nzkJI/fb.gif" width="36" alt="fb" /></a>
-				<a href="https://www.instagram.com/checkatrade/" target="_blank"><img src="https://storage.pardot.com/796483/16015761958vkWqpvz/ig.gif" width="36" alt="ig" /></a>
-				<a href="https://www.youtube.com/user/checkatrade" target="_blank"><img src="https://storage.pardot.com/796483/16015761958P6G8PdU/yt.gif" width="36" alt="yt" /></a>
-				<a href="https://www.linkedin.com/company/checkatrade/" target="_blank"><img src="https://storage.pardot.com/796483/1601576196KAuGge2D/in.gif" width="36" alt="in" /></a>
+
 			</div>
 
-			<div id="copyright">&copy; Checkatrade.com all rights reserved</div>
 		</div>
     </section>
 	
